# WritingToys

./: README.md  pyproject.toml
examples/: characters.py  edit.py  emotions.py  random_words.py  settings.py
src/writing_toys/: characters.py  critic.py  edit.py  interface.py  random_emotion.py  random_words.py  settings.py
